--- a/action/action.yml
+++ b/action/action.yml
@@ -26,4 +26,4 @@ outputs:
     description: 'Detailed message about the operation'
 runs:
   using: 'node20'
-  main: 'action/dist/index.js'
+  main: 'dist/index.js'
