--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -18,6 +18,6 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Update profiles.dev
-        uses: nomadops/profiles.dev@v1
+        uses: ./  # Will use nomadops/profiles.dev@v1 after testing
         # with:
         #   debug: true  # Uncomment for debugging
