--- a/profile.yaml
+++ b/profile.yaml
@@ -2,7 +2,7 @@
 # This is your profile template. Customize it to showcase who you are.
 # All fields are optional - share only what you're comfortable with.
 
-name: Your Name
+name: Test User
 bio: A brief description about yourself
 location: City, Country
 email: your.email@example.com
