--- a/action/package.json
+++ b/action/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "ncc build src/main.ts -o dist --source-map --license licenses.txt",
-    "test": "jest",
+    "test": "jest --passWithNoTests",
     "format": "prettier --write '**/*.ts'",
     "lint": "eslint src/**/*.ts",
     "package": "npm run build",
