feat: Update action for API v2 self-service requirements
- Add repository name validation (must be profiles.dev)
- Add event type validation (only push events)
- Add actor validation (must match repo owner)
- Remove workflow_dispatch support
- Enhance error messages for API failures
- Add migration guide for existing users
- Update documentation for self-service model

Breaking Change: Repository must now be named exactly 'profiles.dev'

Refs: nomadops/profiles-api#36

--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -5,7 +5,8 @@ on:
     branches: [ main ]
     paths:
       - 'profile.yaml'
-  workflow_dispatch:
+  # NOTE: workflow_dispatch is NOT supported by the API
+  # Only push events to the default branch are allowed
 
 permissions:
   id-token: write
@@ -18,7 +19,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Update profiles.dev
-        uses: ./  # Will use nomadops/profiles.dev@v1 after testing
+        uses: ./  # Will use nomadops/profiles.dev@v2 after testing
         # with:
         #   api-endpoint: 'https://httpbin.org/post'  # Uncomment only for mock testing
         #   debug: true
