test: Update profile to test v2 action

--- a/profile.yaml
+++ b/profile.yaml
@@ -1,7 +1,7 @@
 # Test profile for cruftyoldsysadmin
 username: cruftyoldsysadmin
 name: Crufty Old Sysadmin
-tagline: "I've seen things you people wouldn't believe. Attack ships on fire off the shoulder of Orion."
+tagline: "I've seen things you people wouldn't believe. Attack ships on fire off the shoulder of Orion. (Updated via v2!)"
 bio: Battle-hardened systems administrator who remembers when disks were actually floppy and servers had physical reset buttons
 location: "The Server Room (Temperature: Always Too Cold)"
 available_for:
