test: Enable debug mode to troubleshoot API error

--- a/.github/workflows/update-profile.yml
+++ b/.github/workflows/update-profile.yml
@@ -20,5 +20,5 @@ jobs:
       
       - name: Update profiles.dev
         uses: nomadops/profiles.dev@main
-        # Note: api-endpoint defaults to https://api.profiles.dev/api/webhook
-        # No need to override unless testing
+        with:
+          debug: true
