--- a/profile.yaml
+++ b/profile.yaml
@@ -8,6 +8,7 @@ available_for:
   - consulting
   - mentoring
   - collaboration
+  - co-founding
 email: crufty@oldsysadmin.com
 website: https://cruftyoldsysadmin.com
 
