--- a/profile.yaml
+++ b/profile.yaml
@@ -20,6 +20,7 @@ linkedin: https://linkedin.com/in/cruftyoldsysadmin
 # Professional Skills
 skills:
   - Bash Scripting
+  - Vibe coding
   - Linux Administration
   - Kubernetes
   - Terraform
